samples/_failures_safe/1761076484_0430fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b124e491.c: In function ‘main’:
./samples/SAFE/__tmp_b124e491.c:132: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_b124e491.c:131:5: error: expected declaration or statement at end of input
  131 |     if
      |     ^~
